Replace Achievements with Advancements
- Advancements are now in JSON files, converted by the included migration script.
- WizardryAdvancementTrigger is a generic achievement trigger that can be reused throughout the code to trigger custom advancements not covered by the JSON conditions.
- Plus some other small and obvious fixes.

--- a/src/main/resources/assets/ebwizardry/advancements/apprentice.json
+++ b/src/main/resources/assets/ebwizardry/advancements/apprentice.json
@@ -1,21 +1,19 @@
 {
-	"display": {
-		"icon": {
-			"item": "wizardry:apprentice_wand"
-		},
-		"title": {
-			"translate": "achievement.apprentice"
-		},
-		"description": {
-			"translate": "achievement.apprentice.desc"
-		},
-		"frame": "task",
-		"announce_to_chat": false
-	},
-	"parent": "wizardry:arcane_initiate",
-	"criteria": {
-      "coded_trigger": {
-        "trigger": "minecraft:impossible"
-      }
-	}
+    "display": {
+        "icon": {
+            "item": "ebwizardry:apprentice_wand"
+        },
+        "title": {
+            "translate": "achievement.apprentice"
+        },
+        "description": {
+            "translate": "achievement.apprentice.desc"
+        }
+    },
+    "parent": "ebwizardry:arcane_initiate",
+    "criteria": {
+        "criteria_0": {
+            "trigger": "ebwizardry:trigger_apprentice"
+        }
+    }
 }
