Fix root advancement localisations and rename all advancement translation keys to bring them in line with everything else

--- a/src/main/resources/assets/ebwizardry/advancements/apprentice.json
+++ b/src/main/resources/assets/ebwizardry/advancements/apprentice.json
@@ -4,10 +4,10 @@
             "item": "ebwizardry:apprentice_wand"
         },
         "title": {
-            "translate": "achievement.apprentice"
+            "translate": "advancement.wizardry:apprentice"
         },
         "description": {
-            "translate": "achievement.apprentice.desc"
+            "translate": "advancement.wizardry:apprentice.desc"
         }
     },
     "parent": "ebwizardry:arcane_initiate",
