--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,7 @@
 buildscript {
     repositories {
+        mavenCentral()
+		mavenLocal()
         jcenter()
         maven { url = "http://files.minecraftforge.net/maven" }
     }
@@ -8,6 +10,7 @@ buildscript {
     }
 }
 apply plugin: 'net.minecraftforge.gradle.forge'
+apply plugin: 'maven'
 //Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
 
 
@@ -29,8 +32,14 @@ minecraft {
     // stable_#            stables are built at the discretion of the MCP team.
     // Use non-default mappings at your own risk. they may not always work.
     // simply re-run your setup task after changing the mappings to update your workspace.
-    mappings = "snapshot_20180316"
+    mappings = "stable_39"
     // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
+}
+
+repositories {
+	mavenLocal()
+	mavenCentral()
+    maven { url = "http://maven.bluexin.be/repository/snapshots/" }
 }
 
 dependencies {
@@ -54,7 +63,8 @@ dependencies {
     // for more info...
     // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
     // http://www.gradle.org/docs/current/userguide/dependency_management.html
-
+	deobfCompile ("com.teamwizardry.librarianlib:librarianlib-particle-system-1.12.2:4.16-SNAPSHOT:deobf") {changing = true}
+	deobfCompile "com.teamwizardry:wizardry:0.9.7"
 }
 
 processResources {
