Fix deobf jar task

--- a/build.gradle
+++ b/build.gradle
@@ -57,12 +57,9 @@ dependencies {
 
 }
 
-task deobfJar(type: Jar, dependsOn: 'jar') {
-    from "build/source/main"
-    classifier "dev"
-}
-artifacts {
-    archives deobfJar
+task deobfJar(type: Jar) {
+    from sourceSets.main.output
+    classifier = 'deobf'
 }
 
 processResources {
