Remove spaces and stuff from build.gradle
I dunno, they probably break all the fancy gradle things and I usually rename the jar after compiling anyway.

--- a/build.gradle
+++ b/build.gradle
@@ -11,9 +11,9 @@ apply plugin: 'net.minecraftforge.gradle.forge'
 //Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
 
 
-version = " 4.1.4 - MC 1.12.2"
+version = "4.1.4"
 group= "electroblob.wizardry"// http://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = "Electroblob's Wizardry "
+archivesBaseName = "ElectroblobsWizardry"
 
 sourceCompatibility = targetCompatibility = "1.8" // Need this here so eclipse task generates correctly.
 compileJava {
