--- a/gradle.properties
+++ b/gradle.properties
@@ -2,4 +2,7 @@
 # This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx3G
 mc_version=1.12.2
+mc_version_short=1.12
 jei_version=4.13.1.225
+baubles_version=1.5.2
+antique_atlas_version=4.6.3
