Snowballs were a projectile last time I checked...

--- a/src/main/resources/assets/ebwizardry/spells/snowball.json
+++ b/src/main/resources/assets/ebwizardry/spells/snowball.json
@@ -12,7 +12,7 @@
   },
   "tier": "novice",
   "element": "ice",
-  "type": "attack",
+  "type": "projectile",
   "cost": 1,
   "chargeup": 0,
   "cooldown": 1,
