Chuck more ruined spell books into the ocean, and fish all the master spells back out

--- a/src/main/resources/assets/ebwizardry/loot_tables/gameplay/fishing/treasure_additions.json
+++ b/src/main/resources/assets/ebwizardry/loot_tables/gameplay/fishing/treasure_additions.json
@@ -11,7 +11,11 @@
                     "functions": [
                         {
                             "function": "ebwizardry:random_spell",
-                            "undiscovered_bias": 0.3
+                            "tiers": [
+                                "novice",
+                                "apprentice",
+                                "advanced"
+                            ]
                         }
                     ]
                 }
