Added Construct's Armory integration
This fixes an issue where tinkers armor will be completely destroyed when damaged by the undeath curse. Now, it'll ensure that the curse uses ConArm's damaging if it's a tinkers armor piece and handles damage correctly for that mod.

--- a/build.gradle
+++ b/build.gradle
@@ -59,6 +59,7 @@ dependencies {
 
     deobfCompile "baubles:Baubles:${mc_version_short}:${baubles_version}"
     deobfCompile "antique-atlas:antiqueatlas:${mc_version}:${antique_atlas_version}"
+    deobfCompile "constructs-armory:conarm:${mc_version}:${conarm_version}"
 
 }
 
