--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ apply plugin: 'java'
 apply plugin: 'idea'
 apply plugin: 'forge'
 
-version = " 1.1.4 - MC 1.7.10"
+version = " 1.1.5 - MC 1.7.10"
 group = "electroblob.wizardry"// http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "Electroblob's Wizardry "
 
@@ -51,7 +51,7 @@ repositories {
 }
 
 dependencies {
-    compile 'codechicken:NotEnoughItems:1.7.10-1.0.5.120:dev'
+    compileOnly 'codechicken:NotEnoughItems:1.7.10-1.0.5.120:dev'
 }
 
 processResources {
