build: Updated to ForgeGradle5 with FancyGradle

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,22 @@
 # Sets default memory used for gradle commands. Can be overridden by user or command line properties.
 # This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx3G
+mod_id=ebwizardry
 mc_version=1.12.2
 mc_version_short=1.12
 jei_version=4.15.0.291
 baubles_version=1.5.2
 antique_atlas_version=4.6.3
+forge_version=14.23.5.2860
+mappings_version=39
+mappings_channel=stable
+mappings_mc_version=1.12
+baubles_projectid=227083
+baubles_fileid=2518667
+jei_projectid=238222
+artemislib_projectid=313590
+artemislib_version=1.0.6
+artemislib_fileid=2741812
+antiqueatlas_projectid=227795
+antiqueatlas_fileid=2823030
+org.gradle.daemon=false
